objects/Cover_Form__c.object
<CustomObject>
    <fields>
        <fullName>Citation__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Use “Initial Caps” format.  For example, “Effect of Benzene on Adult Population”.  Do not use the title of the publication, do not exceed 120 characters including spaces.</inlineHelpText>
        <label>Citation</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EPA_EIP__c</fullName>
        <formula>Owner:User.EmployeeNumber</formula>
        <label>EPA Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_Criteria_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The nominated publication(s) has not been submitted to a previous STAA competition.</description>
        <label>Eligibility Criteria 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility_Criteria_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The nominated publication(s) was published on or before January 1, 2019, and on or after January 1, 2013.</description>
        <label>Eligibility Criteria 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility_Criteria_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The principal author was an EPA employee or a PHS employee assigned to EPA when the research was performed.</description>
        <label>Eligibility Criteria 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification_1__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Explain how the nominated  paper's represent research that is innovative and important in advancing the scientific knowledge or technology relevant to EPA's mission. It is, important to provide a clear and compelling explanation of the relevance.</inlineHelpText>
        <label>Justification 1</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Justification_2A__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Justification 2a: If multiple publications are submitted, provide a comprehensive explanation of the relationship and lengths between subject matter among the different nominated publications (Limit to 16,000 characters) Enter n/a if blank</inlineHelpText>
        <label>Justification 2A</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Justification_2B__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Justification 2b  List the previous 5 year's of STAA nominations and associated publications for each EPA author. Categorize the list by author and include publication title, year, and award.(Limit to 16,000 characters including spaces) Enter n/a if blank</inlineHelpText>
        <label>Justification 2B</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Justification_2C__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Justification 2c  Provide a description of how this nomination's publication(s) differ from previous (last 5 years) and current nominations by the author(s). (Limit to 16,000 characters including spaces.) Enter n/a if blank.</inlineHelpText>
        <label>Justification 2C</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Justification_2D__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Justification 2d Indicate whether previously submitted supplemental information is listed as supplemental information for the current nomination. (Limit to 16,000 characters including spaces.) Enter n/a if blank.</inlineHelpText>
        <label>Justification 2D</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Justification_2E__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Justification 2e If any of the authors have submitted a concurrent nomination to another research category, provide sufficient justification to distinguish the differnce between nominations. (Limit to 16,000 characters including spaces) Enter n/a if blank</inlineHelpText>
        <label>Justification 2E</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Justification_3A__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Justification 3a Provide evidence of recognition of the contribution from outside. (Limit to 16,000 characters including spaces.)</inlineHelpText>
        <label>Justification 3A</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Justification_3B__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Justification 3b Provide an explanation of the external peer review process used to evaluate the scientific merit of the nominated publication(s). (Limit to 16,000 characters including spaces.)</inlineHelpText>
        <label>Justification 3B</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Laboratory_Office_Name__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <description>STAA Application</description>
        <label>Laboratory/Office Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominating_Author_Formula__c</fullName>
        <formula>Owner:User.FirstName  &amp; " " &amp;   Owner:User.LastName</formula>
        <label>Nominating Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominating_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>STAA</description>
        <label>Nominating Author</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cover Forms</relationshipLabel>
        <relationshipName>Cover_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nominating_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>STAA</description>
        <label>Nominating Official</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Contact.User__c</field>
                <operation>equals</operation>
                <value>$User.Supervisor__c</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cover_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nominating_Official_s_Comments__c</fullName>
        <description>STAA</description>
        <label>Nominating Official's Comments</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Nomination_ID__c</fullName>
        <displayFormat>{YY}-{000}</displayFormat>
        <label>Nomination ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Nominator_Official_Requirement_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I attest that this nomination is placed in the appropriate Research Category.</description>
        <label>Nominator Official Requirement 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nominator_Official_Requirement_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Nominating Official has verified author eligibility and % contribution of each author and the total adds to 100%.</description>
        <label>Nominator Official Requirement 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_NA__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Research_Category__c</fullName>
        <description>STAA</description>
        <label>Primary Research Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Control Systems and Technology (CS)</fullName>
                </value>
                <value>
                    <fullName>Ecological Research (ER)</fullName>
                </value>
                <value>
                    <fullName>Health Effects Research and Human Health Risk Assessment (HE)</fullName>
                </value>
                <value>
                    <fullName>Monitoring and Measurement Methods (MM)</fullName>
                </value>
                <value>
                    <fullName>Transport and Fate (TF)</fullName>
                </value>
                <value>
                    <fullName>Review Articles (RA)</fullName>
                </value>
                <value>
                    <fullName>Risk Management and Ecosystem Restoration (RM)</fullName>
                </value>
                <value>
                    <fullName>Integrated Risk Assessment (IR)</fullName>
                </value>
                <value>
                    <fullName>Environmental Policy and Decision-Making Studies (EP)</fullName>
                </value>
                <value>
                    <fullName>Homeland Security (HS)</fullName>
                </value>
                <value>
                    <fullName>Industry and the Environment (IE)</fullName>
                </value>
                <value>
                    <fullName>Energy and the Environment (EE)</fullName>
                </value>
                <value>
                    <fullName>Sustainability and Innovation (SI)</fullName>
                </value>
                <value>
                    <fullName>Other Environmental Research (OR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STAA_Coordinator_Name__c</fullName>
        <formula>STAA_Coordinator__r.FirstName &amp; " " &amp;  STAA_Coordinator__r.LastName</formula>
        <label>STAA Coordinator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STAA_Coordinator_Telephone_Number__c</fullName>
        <formula>STAA_Coordinator__r.Phone</formula>
        <label>STAA Coordinator Telephone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STAA_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>STAA</description>
        <label>STAA Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cover_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STAA_Coordinator_eMail__c</fullName>
        <formula>STAA_Coordinator__r.Email</formula>
        <label>STAA Coordinator eMail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STAA_Coordinator_s_Comments__c</fullName>
        <description>STAA</description>
        <label>STAA Coordinator's Comments</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Secondary_Research_Category__c</fullName>
        <description>STAA</description>
        <inlineHelpText>Select up to two categories</inlineHelpText>
        <label>Secondary Research Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Control Systems and Technology (CS)</fullName>
                </value>
                <value>
                    <fullName>Ecological Research (ER)</fullName>
                </value>
                <value>
                    <fullName>Health Effects Research and Human Health Risk Assessment (HE)</fullName>
                </value>
                <value>
                    <fullName>Monitoring and Measurement Methods (MM)</fullName>
                </value>
                <value>
                    <fullName>Transport and Fate (TF)</fullName>
                </value>
                <value>
                    <fullName>Review Articles (RA)</fullName>
                </value>
                <value>
                    <fullName>Risk Management and Ecosystem Restoration (RM)</fullName>
                </value>
                <value>
                    <fullName>Integrated Risk Assessment (IR)</fullName>
                </value>
                <value>
                    <fullName>Environmental Policy and Decision-Making Studies (EP)</fullName>
                </value>
                <value>
                    <fullName>Homeland Security (HS)</fullName>
                </value>
                <value>
                    <fullName>Industry and the Environment (IE)</fullName>
                </value>
                <value>
                    <fullName>Energy and the Environment (EE)</fullName>
                </value>
                <value>
                    <fullName>Sustainability and Innovation (SI)</fullName>
                </value>
                <value>
                    <fullName>Other Environmental Research (OR)</fullName>
                </value>
                <value>
                    <fullName>Ecological Research</fullName>
                    <isActive>false</isActive>
                    <label>Ecological Research</label>
                </value>
                <value>
                    <fullName>Environmental Futures</fullName>
                    <isActive>false</isActive>
                    <label>Environmental Futures</label>
                </value>
                <value>
                    <fullName>Environmental Statistics</fullName>
                    <isActive>false</isActive>
                    <label>Environmental Statistics</label>
                </value>
                <value>
                    <fullName>HEResearch and HHRisk Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Health Effects Research &amp; HHRA</label>
                </value>
                <value>
                    <fullName>Integrated Risk Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Integrated Risk Assessment</label>
                </value>
                <value>
                    <fullName>Monitoring and Measuring Methods</fullName>
                    <isActive>false</isActive>
                    <label>Monitoring and Measuring Methods</label>
                </value>
                <value>
                    <fullName>Other Environmental Research</fullName>
                    <isActive>false</isActive>
                    <label>Other Environmental Research</label>
                </value>
                <value>
                    <fullName>Review Articles</fullName>
                    <isActive>false</isActive>
                    <label>Review Articles</label>
                </value>
                <value>
                    <fullName>Social Sciences</fullName>
                    <isActive>false</isActive>
                    <label>Social Sciences</label>
                </value>
                <value>
                    <fullName>Transport and Fate</fullName>
                    <isActive>false</isActive>
                    <label>Transport and Fate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>STAA</description>
        <inlineHelpText>The package stays in DRAFT mode until STAA Coordinator Marks FINAL.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DRAFT</fullName>
                    <default>true</default>
                    <label>DRAFT</label>
                </value>
                <value>
                    <fullName>LOCKED</fullName>
                    <label>LOCKED - Pending Nominating Official Approval</label>
                </value>
                <value>
                    <fullName>LOCKED2</fullName>
                    <label>LOCKED - Pending STAA Coordinator Approval</label>
                </value>
                <value>
                    <fullName>FINAL</fullName>
                </value>
                <value>
                    <fullName>AWARDED</fullName>
                </value>
                <value>
                    <fullName>NOT AWARDED</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                </value>
                <value>
                    <fullName>Package Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Initially created as an overflow object for the increasingly utilized Forms object, this object is oriented more toward forms intended to relegate most substantial content to attachments or other objects, as would a routing slip on top of a document.  Used initially in STAA, but available for other purposes, too.</description>
    <label>Cover Form</label>
    <nameField>
        <displayFormat>EPA-CF-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cover Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Laboratory_Office_Name__c</columns>
        <columns>Primary_Research_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nominations</fullName>
        <columns>NAME</columns>
        <columns>Nominating_Official_s_Comments__c</columns>
        <columns>Laboratory_Office_Name__c</columns>
        <columns>Primary_Research_Category__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Nominations</label>
    </listViews>
    <recordTypes>
        <fullName>STAA_Application</fullName>
        <active>true</active>
        <description>EPA Scientific and Technological Achievement Awards</description>
        <label>STAA Application</label>
    </recordTypes>
    <validationRules>
        <fullName>Citation_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Citation__c) &gt; 120</errorConditionFormula>
        <errorDisplayField>Citation__c</errorDisplayField>
        <errorMessage>Citation Required. Length must not exceed 120 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_2_Category_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES( Secondary_Research_Category__c , "	Ecological Research"),1,0) + 
IF(INCLUDES( Secondary_Research_Category__c, "Environmental Futures"),1,0) + 
IF(INCLUDES( Secondary_Research_Category__c, "Environmental Statistics"),1,0) + 
IF(INCLUDES( Secondary_Research_Category__c, "HEResearch and HHRisk Assessment"),1,0) + 
IF(INCLUDES( Secondary_Research_Category__c, "Integrated Risk Assessment"),1,0) + 
IF(INCLUDES( Secondary_Research_Category__c, "Monitoring and Measuring Methods"),1,0) + 
IF(INCLUDES( Secondary_Research_Category__c, "Other Environmental Research"),1,0) + 
IF(INCLUDES( Secondary_Research_Category__c, "Review Articles"),1,0) + 
IF(INCLUDES( Secondary_Research_Category__c, "Social Sciences"),1,0) +
IF(INCLUDES( Secondary_Research_Category__c, "Transport and Fate"),1,0) &gt; 2</errorConditionFormula>
        <errorDisplayField>Secondary_Research_Category__c</errorDisplayField>
        <errorMessage>Limit of two categories</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STAA_Locked_Record_based_on_Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(

OR(
TEXT(Status__c) = 'FINAL',
TEXT(Status__c) = 'AWARDED',
TEXT(Status__c) = 'NOT AWARDED',
TEXT(Status__c) = 'EXPIRED'),

OR(
 ISCHANGED(Primary_Research_Category__c),
 ISCHANGED(Secondary_Research_Category__c), 
 ISCHANGED(Nominating_Official__c),
 ISCHANGED(STAA_Coordinator__c), 
 ISCHANGED(OwnerId),
 ISCHANGED(Laboratory_Office_Name__c),
 ISCHANGED(Citation__c),
 ISCHANGED(Eligibility_Criteria_1__c),
 ISCHANGED(Eligibility_Criteria_2__c),
 ISCHANGED(Eligibility_Criteria_3__c),
 ISCHANGED(Eligibility_Criteria_4__c),
 ISCHANGED(Justification_1__c),
 ISCHANGED(Justification_2A__c),
 ISCHANGED(Justification_2B__c),
 ISCHANGED(Justification_2C__c),
 ISCHANGED(Justification_2D__c),
 ISCHANGED(Justification_2E__c),
 ISCHANGED(Justification_3A__c),
 ISCHANGED(Justification_3B__c)
)),

TRUE, 
FALSE)</errorConditionFormula>
        <errorMessage>This record is currently LOCKED from editing</errorMessage>
    </validationRules>
</CustomObject>